# Projet-Annuel-BOURMIER-Jordan-ROUVILLE-Quentin-Groupe-1

./: README.md
Documentation/: Fonctionnalités C.docx  Fonctionnalités WEB.docx  Maquette IP.pkt  Maquette_IP.pkt  ~$nctionnalités WEB.docx
Documentation/Mission 1/Diagrammes (UML)/: Diagramme de classes.mdj  Fonctionnalités.docx  ~$nctionnalités.docx
Documentation/Mission 3/: Diagramme_de_Gantt.xlsx  Matrice RACI.xlsx
Enregistrer un prestataire (C)/Database/: CMakeLists.txt  main.c
Enregistrer un prestataire (C)/QR Code/: qrcodegen.c
QR Code/: CMakeLists.txt  main.c
QRCODE/: CMakeLists.txt  main.c
